<resources>
    <string name="app_name">Adivinha</string>
    <string name="action_settings">Settings</string>
    <string name="adivinhe_numero">Adivinhe o número que estou a pensar (entre 1 e 10).</string>
    <string name="numero">Número</string>
    <string name="introduza_numero">Introduza um número entre 1 e 10.</string>
    <string name="numero_invalido">Número inválido. Introduza um número entre 1 e 10.</string>
    <string name="acertou">Parabéns, acertou</string>
    <string name="perdeu">Perdeu o jogo</string>
    <string name="numero_maior">O número que estou a pensar é maior</string>
    <string name="numero_menor">O número que estou a pensar é menor</string>
    <string name="novo_jogo">Jogo iniciado. Indique o seu palpite.</string>
    <string name="acertou_ao_fim_de">Acertou ao fim de</string>
    <string name="tentativas">tentativas</string>
    <string name="jogar_novamente">Pretende jogar novamente?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="novo">Novo</string>
    <string name="estatasticas">Estatísticas</string>
    <string name="versao">Adivinha - versão 0.1</string>
    <string name="title_activity_estatisticas">EstatisticasActivity</string>
    <string name="titulo_tentativas">Tentativas</string>
    <string name="titulo_jogos">Jogos</string>
    <string name="minimo">Mínimo</string>
    <string name="maximo">Máximo</string>
    <string name="media">Média</string>
    <string name="numero">Número</string>
    <string name="vitorias">Vitórias</string>
    <string name="derrotas">Derrotas</string>
</resources>
